@@ -1,11 +1,17 @@
+2004-07-01  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* interface/alsaseq_c.c, interface/rtsyn_common.c,
+	  timidity/playmidi.c:
+	  Make natural performance for force keysig function
+
 2004-06-30  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* interface/alsaseq_c.c, interface/rtsyn_common.c,
 	  timidity/playmidi.[ch], timidity/readmidi.c,
 	  timidity/timidity.[ch]:
 	  Interlock interfaces with -K and -T command options
-	  Hack up force keysig calculation
-	  Change the base of measure (bar) as 1 (was 0)
+	  Improve force keysig calculation
+	  Change the base number of measure (bar) counter as 1 (was 0)
 
 2004-06-14  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
